<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.yasmeen</groupId>
    <artifactId>MineSweeper-Lion</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <javafx.version>23</javafx.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <finalName>MineSweeper-Lion</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>main.MainFx</mainClass>
                    <options>
                        <option>--enable-native-access=ALL-UNNAMED</option>
                        <option>--enable-native-access=javafx.graphics</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.openjfx:javafx-*</exclude>
                                </excludes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>main.Launcher</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>copy-javafx-jars</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/javafx-libs</outputDirectory>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-base</artifactId>
                                    <version>${javafx.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-graphics</artifactId>
                                    <version>${javafx.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-controls</artifactId>
                                    <version>${javafx.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-fxml</artifactId>
                                    <version>${javafx.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-media</artifactId>
                                    <version>${javafx.version}</version>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-javafx-native-jars</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/javafx-libs</outputDirectory>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-base</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac-aarch64</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-graphics</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac-aarch64</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-controls</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac-aarch64</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-fxml</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac-aarch64</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-media</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac-aarch64</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-base</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-graphics</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-controls</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-fxml</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-media</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>mac</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-base</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>win</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-graphics</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>win</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-controls</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>win</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-fxml</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>win</classifier>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.openjfx</groupId>
                                    <artifactId>javafx-media</artifactId>
                                    <version>${javafx.version}</version>
                                    <classifier>win</classifier>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
